@@ -105,6 +105,13 @@
             target="_blank" href="https://trac.cyberduck.io/ticket/11521">#11521</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Unable to remove delete marker (S3) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11803">#11803</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Unable to download previous version of file (S3, Backblaze B2) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11797">#11797</a>, <a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11835">#11835</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Copying files requires permission to read bucket ACL (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11701">#11701</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Unable to set storage class to STANDARD (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11849">#11849</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Taskbar shows incorrect number of transfers (Windows) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11813">#11813</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Allow to delete trashed files (Google Drive) (<a
@@ -115,6 +122,8 @@
         target="_blank" href="https://trac.cyberduck.io/ticket/11751">#11751</a>)
     <li><span class="label label-warning">Bugfix</span> Use specific region endpoint only with --region option (S3, CLI) (<a
         target="_blank" href="https://trac.cyberduck.io/ticket/11827">#11827</a>)
+    <li><span class="label label-warning">Bugfix</span> Empty list output when listing root directory (CLI) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11814">#11814</a>)</li>
 </ul>
 
 <p>
